Finaliza o desenvolvimento do projeto da biblioteca